spring-service-int/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-api
    # app.kubernetes.io/component: demo-api
    # app.kubernetes.io/instance: demo-api
  name: demo-api
  
spec:
  ports:
  - port: 8080
  selector:
    deployment: demo-api
